<resources>
    <string name="app_name">Orugallu</string>
    <string name="inf_txt">HEgfbgfxghfgf</string>
    <string name="inf_txxt">Warangal is a city in the south Indian state of Telangana. It was the capital of the Kakatiya dynasty from the 12th to 14th centuries, and many intricately carved monuments from this period still stand. Among them are the ruins of 13th-century Warangal Fort and the Thousand Pillar Temple, built in 1163. Set on a lake, Bhadrakali Temple dates to the 7th century and is dedicated to the Hindu goddess Kali.\
Area: 471 km²\
Metropolitan area: 1,805 km²\
Weather: 31 °C, Wind S at 11 km/h, 64% Humidity\
Population: 7.54 lakhs (2018)\
Other Names: Orugallu; Ekasila Nagaram; Tri-City\
Districts: Warangal Urban; Warangal Rural</string>
    <string name="bht_inf">The temple is believed to be built in 625 A.D by the King Pulakeshin II of Chalukya dynasty to commemorate his victory over Vengi region of Andhra Desham, as per the writings on the temple wall.

    Kakatiya kings later have adopted the temple and considered Goddess Bhadrakali as their "Kula Devatha". A lake was also built by Ganapati deva adjacent to the temple. Due to the fall of Kakatiya dynasty to the Muslim rulers of Delhi, the temple lost its prominence. The Kakatiyas negotiated a truce with Allauddin Khilji by offering the diamond in exchange not to be invaded. He sent his slave and personal confidant Malik Kufur to personally transport the diamond. In 1950, the temple was renovated by Sri Ganapathi Sastri a devi upasaka along with the help of a local merchant and other affluent locals.Apara Ekadashi is observed as Goddess Bhadrakali Ekadashi.The history of the Koh-i-Noor diamond; part of British Crown Jewels, is closely associated with this temple as it was installed, as the left eye of Goddess Bhadrakali by the Kakatiya dynasty.</string>
    <string name="kkk">
    Address: Warangal, Telangana \</string>
    <string name="rmpt_inf">Ramappa Temple also known as the Ramalingeswara temple is located 77 km from Warangal, the ancient capital of the Kakatiya dynasty,15km from Mulugu, 209 km from Hyderabad in the state of Telangana in southern India. It lies in a valley at Palampet village of Venkatapur Mandal, in erstwhile Mulug Taluq of Mulugu district, a tiny village long past its days of glory in the 13th and 14th centuries. An inscription in the temple dates it to the year 1213 CE and says it was built by a General Recherla Rudra, during the period of the Kakatiya ruler Ganapati Deva.

    The temple is a Shivalaya, where Lord Ramalingeswara is worshipped. Marco Polo, during his visit to the Kakatiya Empire, allegedly called the temple "the brightest star in the galaxy of temples".Ramappa Temple stands majestically on a 6 ft high star-shaped platform. The hall in front of the sanctum has numerous carved pillars that have been positioned to create an effect that combines light and space wonderfully. The temple is named after the sculptor Ramappa, who built it, and is perhaps the only temple in India to be named after a craftsman who built it.

    The main structure is in a reddish sandstone, but the columns round the outside have large brackets of black basalt. These are carved as mythical animals or female dancers or musicians, and are "the masterpieces of Kakatiya art, notable for their delicate carving, sensuous postures and elongated bodies and heads".

    The Temple is included in the proposed UNESCO World Heritage Site "The Glorious Kakatiya Temples and Gateways", in 2019 on the "tentative list". The proposal was submitted to UNESCO on 10 September 2010.</string>
    <string name="SSJ_inf">Sammakka Saralamma Jatara is a festival to honour the Hindu tribal goddesses, celebrated in the state of Telangana, India. This Jatara is known for witnessing one of the largest people gatherings in the world. People offer Bangaram:The Jatara begins at Medaram in Tadvai mandal in Mulug district\
                            The main jatara is held once in every 2 years.\
                            Jatara can be considered for Intangible Cultural Heritage of Humanity tag of UNESCO.\

    </string>
    <string name="tpt_inf"> Rudreswara Temple locally known as Veyisthambala Gudi (Thousand pillars temple) is one of the fine and earliest available examples of Kakatiya art, architecture and sculpture. It was built by Rudra Deva, and named after him as ‘Sri Rudreswara Swamy temple with the presiding deity as Rudreswara, in 1163 AD in the style of later Chalukyan and early Kakatiyan Architecture, star-shaped and triple shrined (Trikutalaya). The temple is a fine specimen of architecture and sculpture with One thousand pillars. There are richly carved pillars, perforated screens, exquisite icons; rock cut elephants and the monolithic dolerite Nandi as components of the temple. Strengthening of foundations like sandbox technique, the skill of Kakatiya sculptors is manifest in adroit craftsmanship and flawless ivory carving technique in their art. The ingenuity of Kakatiya sculptors is visible in likes of lathe turned, and shiny polish in dolerite and granite stone sculpture and craft work of Nava Rangamandapa.You can find a huge monolith Nandi, made up of black basalt stone.</string>
    <string name="pmt_in"> Padmakshi Gutta or Kadalalaya basadi consists of a Jain temple dedicated to Goddess Padmavati, located on a hilltop in the heart of the town of Hanamakonda, was originally constructed during Kakatiya reign.\ Till the Kakatiya Kings renovated and established the Goddess Padmakshi, previously it was a Basadi a Jain temple. In the garbhagriha, there is a massive Tirthankara Parshvanath image, with yaksha Dharanendra to the right and the goddess Padmavati (Padmakshi) to the left.[1]. The images, all carved from live rock, have been retouched and painted.Padmakshi Gutta or Kadalalaya basadi consists of a Jain temple dedicated to Goddess Padmavati, located on a hilltop in the heart of the town of Hanamakonda, was originally constructed during Kakatiya reign.\ Till the Kakatiya Kings renovated and established the Goddess Padmakshi, previously it was a Basadi a Jain temple. In the garbhagriha, there is a massive Tirthankara Parshvanath image, with yaksha Dharanendra to the right and the goddess Padmavati (Padmakshi) to the left.[1]. The images, all carved from live rock, have been retouched and painted.</string>
    <string name="timings_ramapa">Hours of visit:\
    Open on all days of the week from 5 AM – 6PM</string>
    <string name="acc">Accommodation:Haritha Lake View Resort\
                        Open on all days of the week from 5 AM – 6PM\</string>
    <string name="Laknavaram_inf">The lake was built by the rulers of the Kakatiya dynasty in 13th Century A.D. Explore the massive Laknavaram Lake, a spectacular waterbody located in the Jayshankar-Bhupalpally district of Telangana. This breath takingly beautiful lake is an amazing and popular tourist spot in Telangana. The lake is simply an exceptional thing of beauty. It is well-known for its wonderful hanging bridge, considered one-of-its-kind in the state.The Laknavaram Lake which is nestled amidst the hills was also expanded to provide a source of irrigation. The hanging bridge takes you to the mini island in the lake.</string>
    <string name="bting_inf">"Laknavaram Lake Warangal Boating Charges\
        50 per person for Adults\
        30 per person for Children\
        300 for Speed Boat (Max. 4 people) "</string>
    <string name="bgtwf_in">Bogatha is colloquially called as "the Telangana Niagara" and "Telangana Niagara Jalapatham".\
        The second largest waterfall located in the state of Telangana. This is an offbeat place which proffers mesmerizing and picturesque views of the colourful and rich landscape that circumscribes it. The variegated hills from where the water bubbles and cascades down in a tortuous manner is simply beautiful. Falling from an elevation of 30 feet, many small gushing water streams coalesce to form a large magical pool at the bottom. The water of the Bogatha Waterfall later on merges with the Godavari river. Bogatha Waterfalls is a hidden gem that will prove to be a great getaway from the hustle bustle of the city and give you an opportunity to spend some time in the lap of nature and enjoy the pleasant sound and touch of bountiful water drops.\
        Even though water flows throughout the year, a good time to visit is between June and November (after the monsoon), when the most water flows. There is no road facility, so visitors have to trek for some distance to reach the waterfall.
    </string>
    <string name="bgt_st">Near by Attractions:\
        Bogateswara Swamy Temple\
        Butterfly Garden\
        Watch Tower</string>
    <string name="pak_in">Pakhal Lake is a man-made lake in the Pakhal Wildlife Sanctuary in Warangal district, Telangana.\
        The great Kakatiya, Telugu king Ganapati Deva has constructed Pakhal lake in the deepest forest area for the future uses of farmland for agriculture purpose. Now approximately 3Lakh Acres of the area is surviving under it. Kakatiya rulers have lot of future plannings to make peoples lives better. They used so many kinds of engineering technologies in the constructions.They built Ramappa temple on a lake, as well as thousand pillars temples at Hanamkonda is constructed on sand land and still surviving for past thousand years and they will be standing so strongly other 2 to 3 thousand years so proudly after our generation.\
    The Pakhal lake which is enveloped by the scenic forested hills, is spread over an area of 30 Sq. Kms. The harness of a small tributary of the River Krishna. </string>
    <string name="pkhws">The Pakhal Wildlife Sanctuary is a striking manmade lake, which was completed in the 1213 AD by the royal Kakatiyas. This beguiling sanctuary is spread over an area of 860 square kilometers. The place gets more interesting as this amazing plateau region is surrounded by a mesmerizing range of low hills. The environment of the sanctuary and the Pakhal Lake as an add-on form the most stunning sight ever.\
        It experiences Tropical climate.The Temperature is between 15 - 45 Degrees.The Avg rainfall is 1225mm.
        The flora consists of mixed forests, bamboo and teak forests.\
        Fauna found here include Sambar(Deer), Nilgai(Blue bull), Sloth Bear, Leopard, Chowsingha (four-horned antelope), Chital, Chinkara (mountain gazelle), Wild Boar, blackbuck.\
        Commonly found reptiles are python,cobra,common krait,montior lizard,crocodiles</string>
    <string name="mdrm_nba">Nearby Attraction:\
    Jampanna vagu is a tributary to river Godavari.\
    Chilakalagutta Medaram.</string>
    <string name="bt_inf">The temple which is counted as one of the oldest temples of Indian History is dedicated to the worship the mother of goddesses, Kali Matha or Bhadrakali Ammavaru. Goddess Bhadrakali is a true example of the capability and strength of women. Surrounded by the lush greenery amidst the hilly region, the Bhadrakali Temple opens up to a picturesque setting on the banks of the Bhadrakali Lake. The serene surroundings of the temple work as an add-on and help the mind to relax and soothe the soul, while one gives away in obedience to the supreme power.</string>
    <string name="bt_tim">Hours of visit:\
                          All Days of the Week\
                          5:30 AM - 1:00 PM\
                          3:00 PM - 8:30 PM</string>
    <string name="tptt_inf">"The Thousand Pillar temple has three presiding deities, Lord Vishnu, Shiva and Surya Deva. The temple stands as a statement of the finest of arts of the Kakatiyas. "</string>
    <string name="timing">Hours of visit:\
                          All Days of the Week\
                          5:00 AM - 9:00 PM</string>
</resources>