<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Main5Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
        android:id="@+id/bkti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bkt" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:textSize="26dp"
            android:text="Bhadrakali Temple"
            android:textStyle="normal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_inf"
            android:paddingBottom="12dp"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bht_inf"
         />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bt_tim"
            android:paddingBottom="12dp"/>
        <Button
            android:id="@+id/bhadrakai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get Directions"
            android:paddingBottom="12dp"/>
    </LinearLayout>
</ScrollView>