<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".thusand">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/thust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/tpt" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:textSize="26dp"
            android:text="Thousand Pillar Temple"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tptt_inf"
            android:paddingBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/tpt_inf"
             />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timing"
            android:paddingBottom="12dp"/>
        <Button
            android:id="@+id/thusand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get Directions"
            android:paddingBottom="12dp"/>

    </LinearLayout>

</ScrollView>